plugins/formal-verification/testData/diagnostics/good_contracts/nullability.kt
// ALWAYS_VALIDATE

fun <!VIPER_TEXT!>return_null<!>(): Int? = null
